# airfoilgenerator

./: .gitignore  AIRFOILcompletegnuplot.plt  CMakeLists.txt  MEANline_object.f08  PANEL_object.f08  README.md  airfoilgenerator.f08  discretisation_module.f08  discretization_module.f08
src/: airfoilgenerator.f90
src/modules/: AIRFOIL_object.f90  MEANline_object.f90  PANEL_object.f90  discretization_module.f90  math_module.f90
src/plt/: AIRFOILelement_plot.plt  COORDSplot.plt  MEANplot.plt
